--- a/DBP 관리/DBP 프로젝트.csproj
+++ b/DBP 관리/DBP 프로젝트.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.31" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
 
