Admin Login Apply

--- a/DBP 관리/DBP 프로젝트.csproj
+++ b/DBP 관리/DBP 프로젝트.csproj
@@ -33,4 +33,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="if exist &quot;$(TargetPath).locked&quot; del &quot;$(TargetPath).locked&quot;&#xD;&#xA;&#xD;&#xA;if exist &quot;$(TargetPath)&quot; if not exist &quot;$(TargetPath).locked&quot; move &quot;$(TargetPath)&quot; &quot;$(TargetPath).locked&quot;&#xD;&#xA;&#xD;&#xA;if exist &quot;$(TargetDir)$(TargetName).pdb.locked&quot; del &quot;$(TargetDir)$(TargetName).pdb.locked&quot;&#xD;&#xA;&#xD;&#xA;if exist &quot;$(TargetDir)$(TargetName).pdb&quot; if not exist &quot;$(TargetDir)$(TargetName).pdb.locked&quot; move &quot;$(TargetDir)$(TargetName).pdb&quot; &quot;$(TargetDir)$(TargetName).pdb.locked&quot;" />
+  </Target>
+
 </Project>
